Update CORS config for Vercel frontend and fix application endpoints security